--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
+    "react-lottie": "^1.2.3",
     "react-paginate": "^7.1.3",
     "react-popper": "^2.2.5",
     "react-redux": "^7.2.0",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-lottie": "^1.2.6",
     "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.12",
